

HEAD
====
Fixed:
- strict-aliasing violation in containerof has been worked around
Changes:
- format1: removed older formatter in favor of format2
- format2: add check for empty key
- format2: function-specific delimiters
- string: HX_basename (the fast variant) now recognizes the root directory
- string: HX_basename now returns the trailing component with slashes
  instead of everything after the last slash (which may have been nothing)


libHX 3.4 (April 03 2010)
=========================
Changes:
- add explicit initialize/deinitialize functions HX_init, HX_exit
Enhancements:
- add the HX_memmem function
- add the HXlist_empty function
- documentation updates: HXlist traversal


libHX 3.3 (January 20 2010)
===========================
Bug fixes:
- format: fix incorrect copying of non-expanded % strings
- proc: avoid calling close(-1) to not trip up valgrind
- shconfig: fix incorrect parsing of "\'"
- shconfig: fix incorrect processing of "\"\\\0BCD"
- shconfig: be more strict with syntax
Enhancements:
- deque: add HXdeque_genocide2
- format2: new format string (make-style) support
- mc: add HXmc_zvecfree
- shconfig: add HX_shconfig_map to return all entries of a shconfig file
- rand: add HX_drand ('double'-type bounds and return value)
- rand: avoid some function call overhead in HX_irand


libHX 3.2 (October 11 2009)
===========================
Enhancements:
- opt: add HXTYPE_MCSTR for storing into hxmc_t *s
- string: add HX_strquote


libHX 3.1 (September 13 2009)
=============================
Enhancements:
- added HXbitmap_* functions
Fixes:
- mc: HXmc_strcpy produced a zero-length string when NULL was copied


libHX 3.0.1 (August 31 2009)
============================
Fixes:
- map: avoid underflow in value-based tree comparison


libHX 3.0 (August 27 2009)
==========================
Changes:
- automatically skip building testcases if C++ compiler not available
  (reminder: libHX itself does not require a C++ compiler)