@@ -4,6 +4,8 @@ HEAD
 ====
 Fixed:
 - strict-aliasing violation in containerof has been worked around
+Enhancements:
+- format2: add the %(exec) function
 Changes:
 - format1: removed older formatter in favor of format2
 - format2: add check for empty key
